Fix animation on closing navbar on mobile phones.

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,20 @@ section {
   margin-left: 0;
 }
 
+.full-width {
+  width: 100%;
+}
+
+.second {
+  width: 20px !important;
+  margin-left: 5px !important;
+}
+
+.third {
+  width: 15px !important;
+  margin-left: 10px !important;
+}
+
 .bar-one {
   width: 25px;
   height: 1px;
